# vibe-code-bench

./: .env.example  .gitignore  AGENTS.md  BENCHMARK_REPORT.md  BENCHMARK_REPORT_10MODELS.md  BENCHMARK_REPORT_11MODELS.md  BENCHMARK_REPORT_14MODEL.md  CASES.md  KIMI_K2.5_EVALUATION_REPORT.md  README.md  average_results.py  generate_leaderboard_pdf.py  generate_report.py  merge_run.py  pyproject.toml  requirements.txt
eval_cases/case_01_pomodoro/: spec.md  tests.py
eval_cases/case_02_quiz/: spec.md  tests.py
eval_cases/case_03_calculator/: spec.md  tests.py
eval_cases/case_04_notes/: spec.md  tests.py
eval_cases/case_05_weather/: spec.md  tests.py
eval_cases/case_06_kanban/: spec.md  tests.py
eval_cases/case_07_stopwatch/: spec.md  tests.py
eval_cases/case_08_typing/: spec.md  tests.py
eval_cases/case_09_expenses/: spec.md  tests.py
eval_cases/case_10_memory/: spec.md  tests.py
eval_cases/case_11_palette/: spec.md  tests.py
eval_cases/case_12_habits/: spec.md  tests.py
eval_cases/case_13_password/: spec.md  tests.py
eval_cases/case_14_units/: spec.md  tests.py
eval_cases/case_15_markdown/: spec.md  tests.py
eval_cases/case_16_repostats/: spec.md  tests.py
gold/: 20260102_191730_results.json
reports/: differentiation_baseline.md  variance_tables.xlsx
runs/: final_average_report.json  run1_full.json  run2_full.json  run3_full.json
tests/: __init__.py  test_dependency_enforcement.py  test_multi_judge.py  test_scoring_weights.py  test_validator.py
vibe_eval/: __init__.py  __main__.py  agent_loop.py  cli.py  fast_suite.py  runner.py
(+1323 files in other folders)
